--- a/Frontrunway/package.json
+++ b/Frontrunway/package.json
@@ -29,6 +29,7 @@
     "notistack": "^3.0.2",
     "pdfkit": "^0.16.0",
     "react": "^18.3.1",
+    "react-datepicker": "^8.0.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.28.0",
